# attaseek.com

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
crates/attaseek-web/: Cargo.toml
crates/attaseek-web/src/: config.rs  lib.rs  main.rs
crates/attaseek-web/src/routes/: contact.rs  health.rs  mod.rs  newsletter.rs
deploy/: attaseek-backend.service  attaseek.com.nginx
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: Footer.vue  HeroSection.vue  NavBar.vue  ProductCard.vue
frontend/src/router/: index.ts
frontend/src/views/: AboutView.vue  CommunityView.vue  DocsView.vue  HomeView.vue  NotFoundView.vue  ProductDetailView.vue  ProductsView.vue  TechnologyView.vue
scripts/: build.sh  deploy.sh
