[workspace]
resolver = "2"
members = ["crates/attaseek-web"]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT"
publish    = false
authors    = ["AttaSeek contributors"]
repository = "https://github.com/openatta/attaseek.com"

[workspace.dependencies]
# async / runtime
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# HTTP server
axum       = "0.8"
tower      = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }

# serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# errors / logging
thiserror = "1"
anyhow    = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# config
figment = { version = "0.10", features = ["toml", "json", "env"] }

# common
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros", "local-offset"] }
uuid = { version = "1", features = ["v4"] }
